--- a/css/estilo.css
+++ b/css/estilo.css
@@ -126,13 +126,13 @@ footer div h3 {
     height: 300px;
     border-radius: 20px;
     border: solid 5px dimgrey;
-}
+    background-image: linear-gradient(rgba(32, 68, 34, 0.836), rgb(148, 148, 141));
+    }
 .fotos {
     display: flex;
     align-items: center;
     text-align: center;
     color: antiquewhite;
-    ;
 }
 
 /*inicio acciones */
@@ -140,8 +140,7 @@ footer div h3 {
     background-color: transparent; 
     padding: 5px;
     width: 80%;
-    margin-left: 150px;
-  
+    margin-left: 150px; 
 }
 
 .container {
@@ -157,6 +156,7 @@ footer div h3 {
     align-content: stretch;
     justify-content: space-evenly;
     align-items: center;
+    transform: scale(0.8,0.8);
  }
 
 .accion1 {
