--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,20 +17,31 @@ body {
 .logosup {
     width: auto;
     padding-left: 500px;
-    }
+    }    
 
-.list {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly ;
-    width: 80%;
-    margin-left: 110px;
-    height: 100px;
-    font-size: 2rem ;
-    color: antiquewhite; 
-    background-color: rgba(0, 0, 0, 0.8);
-    
+.navbar-expand-lg {
+    background-image: linear-gradient(rgba(32, 68, 34, 0.836), rgb(148, 148, 141));
 }
+.navbar-collapse {
+    display: flex;
+    justify-content: space-around;
+    font-family: Lucida Sans Unicode ;
+    font-size: x-large;
+    text-align: justify;
+    color: black;
+}
+.navbar-brand {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    font-size: 2.25rem;
+    line-height: inherit;
+    white-space: nowrap;
+    color:black 
+}
+
 .encabezado {
     margin-left: 230px;
     margin-top: 50px;
@@ -70,7 +81,7 @@ body {
     border: 3px solid #eeecec ;
     margin-left: 700px;
     width: 300px;
-    height: 24px;
+    height: 70px;
     padding: 19px;
 }
 
@@ -89,10 +100,9 @@ footer div h3 {
     text-align: justify;
     background-color: rgba(0, 0, 0, 0.8) ;   
     border-radius: 5px;
-    border: solid 5px dimgrey;
-    margin-left: 750px;
-    width: 400px;
-    height: 250px;   
+    margin-left: 500px;
+    width: 330px;
+    height: 360px;   
 }
 .contacto {
     font-family: Lucida Sans Unicode ;
@@ -110,7 +120,7 @@ footer div h3 {
     border: solid 5px dimgrey;
     width: 600px;
     height: 450px;
-    margin-left: 400px;
+    margin-left: 500px;
 }
 /* inicio nosotros */
 
@@ -286,7 +296,7 @@ footer div h3 {
     margin: 8px;  
 }   
 .direccionfooter {
-    font-family: Verdana;
+    font-family: Verdana; 
     text-align: center;
     color: cadetblue; 
     width: 300px;
