--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,30 +18,6 @@ body {
     width: auto;
     padding-left: 500px;
     }    
-
-.navbar-expand-lg {
-    background-image: linear-gradient(rgba(32, 68, 34, 0.836), rgb(148, 148, 141));
-}
-.navbar-collapse {
-    display: flex;
-    justify-content: space-around;
-    font-family: Lucida Sans Unicode ;
-    font-size: x-large;
-    text-align: justify;
-    color: black;
-}
-.navbar-brand {
-    display: flex;
-    justify-content: space-around;
-    padding-top: 0.3125rem;
-    padding-bottom: 0.3125rem;
-    margin-right: 1rem;
-    font-size: 2.25rem;
-    line-height: inherit;
-    white-space: nowrap;
-    color:black 
-}
-
 .encabezado {
     margin-left: 230px;
     margin-top: 50px;
@@ -69,7 +45,7 @@ body {
 .direccionfooter {
     font-family: Verdana;
     text-align: center;
-    color: cadetblue; 
+    color:black; 
     width: 90%;
     margin-left: 60px;
     
@@ -78,7 +54,9 @@ body {
     display: flex;
     flex-direction: row;
     justify-content:space-evenly; 
-    border: 3px solid #eeecec ;
+    border-radius: 20px;
+    border: solid 5px dimgrey;
+    background-image: linear-gradient(rgba(32, 68, 34, 0.836), rgb(148, 148, 141));
     margin-left: 700px;
     width: 300px;
     height: 70px;
@@ -114,10 +92,9 @@ footer div h3 {
 .mapagoogle {
     width: 600px;
     height: 450px;
+    border: solid 5px dimgray;
 }
 .ubicacion {
-    border-radius: 5px;
-    border: solid 5px dimgrey;
     width: 600px;
     height: 450px;
     margin-left: 500px;
@@ -128,6 +105,7 @@ footer div h3 {
     display: flex;
     flex-direction: row ;
     justify-content: space-evenly ;
+    align-items: center;
     background-color: transparent;
     margin-bottom: 50px;
     margin-left: 130px;
@@ -137,8 +115,8 @@ footer div h3 {
     border-radius: 20px;
     border: solid 5px dimgrey;
     background-image: linear-gradient(rgba(32, 68, 34, 0.836), rgb(148, 148, 141));
-    }
-.fotos {
+ }
+    .fotos {
     display: flex;
     align-items: center;
     text-align: center;
@@ -261,64 +239,44 @@ footer div h3 {
         
         }
     
-    .barramenu {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        text-decoration: none;
-        margin-bottom: 80px;
-    }
-    
-    .list  {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        width: 330px;
-        margin-left: 24px;
-        height: 25px;
-        font-size: 1rem;
-        color: antiquewhite;
-        background-color: rgba(0, 0, 0, 0.8);
-        align-content: stretch;     
-        }
-    
 
     .cuerpo {
-    color: white;
-    font-family: Verdana;
-    font-size: small;
-    text-align: justify;
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 20px;
-    padding: 5px;
-    border: solid 5px dimgrey;
-    width: 330px;
-    margin: 8px;  
+        color: white;
+        font-family: Verdana;
+        font-size: small;
+        text-align: justify;
+        background-color: rgba(0, 0, 0, 0.8);
+        border-radius: 20px;
+        padding: 5px;
+        border: solid 5px dimgrey;
+        width: 330px;
+        margin: 13px;  
 }   
 .direccionfooter {
     font-family: Verdana; 
     text-align: center;
-    color: cadetblue; 
+    color:black; 
+    font-size: small;
     width: 300px;
-    height: 80px;
-    margin-left: 26px;
-    
-}   
+    height: 117px;
+    margin-left: 26px;   
+}  
+.direccion-responsive {
+    font-size: medium; 
+}
+
 .logoredes {
     display: flex;
     flex-direction: row;
     justify-content:space-evenly; 
+    align-items: center;
     border: solid 5px dimgrey;
     color: antiquewhite;
     background-color: rgba(160, 157, 157, 0.8);
     border-radius: 20px;
-    margin-left: 8px;
+    margin-left: 16px;
     width: 302px;
     height: 22px;
-}
-footer {
-    width: 370px;
-    height: auto;
 }  
 /*layout nosotros*/
 
@@ -328,13 +286,18 @@ footer {
 .columnafotos {
     display: flex;
     flex-direction: column;
-    margin-left: 15px;
+    align-items: stretch;
+    margin-left: 5px;
+    width: 330px;
 }
 
 /* ubicacion layout */ 
 .mapa {
-    margin-left: 10px;
+    margin-left: 5px;
     width: 370px;
+    color: gainsboro;
+    border: solid 2px dimgrey;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 .ubicacion {
     width: 330px;
@@ -345,10 +308,14 @@ footer {
 .mapagoogle {
     width: 350px;
     height: 180px;
+    border: 3px dimgray;
 }
 /* contacto layout */ 
 .contacto {
-    margin-left: 10px;
+    margin-left: 5px;
+    color: gainsboro;
+    border: solid 2px dimgrey;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .formulario {
@@ -359,7 +326,7 @@ footer {
     background-color: darkolivegreen;
     border-radius: 5px;
     border: solid 5px dimgrey;
-    height: 250px;
+    height: 352px;
 }
 
 
